--- a/CourseWork/CourseWork.csproj
+++ b/CourseWork/CourseWork.csproj
@@ -201,6 +201,12 @@
     <Compile Include="Projects_role\Projects_roleFormEdit.Designer.cs">
       <DependentUpon>Projects_roleFormEdit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Projects_task\Projects_taskForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Projects_task\Projects_taskForm.Designer.cs">
+      <DependentUpon>Projects_taskForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Authorization_Registration_Forgot_pass\RegistrationForm.cs">
       <SubType>Form</SubType>
@@ -377,6 +383,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Projects_role\Projects_roleFormEdit.resx">
       <DependentUpon>Projects_roleFormEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Projects_task\Projects_taskForm.resx">
+      <DependentUpon>Projects_taskForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
