--- a/CourseWork/CourseWork.csproj
+++ b/CourseWork/CourseWork.csproj
@@ -207,6 +207,18 @@
     <Compile Include="Projects_task\Projects_taskForm.Designer.cs">
       <DependentUpon>Projects_taskForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Projects_task\Projects_taskFormAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Projects_task\Projects_taskFormAdd.Designer.cs">
+      <DependentUpon>Projects_taskFormAdd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Projects_task\Projects_taskFormEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Projects_task\Projects_taskFormEdit.Designer.cs">
+      <DependentUpon>Projects_taskFormEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Authorization_Registration_Forgot_pass\RegistrationForm.cs">
       <SubType>Form</SubType>
