--- a/CourseWork/CourseWork.csproj
+++ b/CourseWork/CourseWork.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Authorization\AuthorizationForm.Designer.cs">
       <DependentUpon>AuthorizationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyTask\MyTaskForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyTask\MyTaskForm.Designer.cs">
+      <DependentUpon>MyTaskForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Registration\ConfirmationMailForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -338,6 +344,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ForgotPass\ForgotPassFormNewPassword.resx">
       <DependentUpon>ForgotPassFormNewPassword.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyTask\MyTaskForm.resx">
+      <DependentUpon>MyTaskForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Registration\ConfirmationMailForm.resx">
       <DependentUpon>ConfirmationMailForm.cs</DependentUpon>
